tests/errors/syntax_errors/types_arg.py
from pyccel.decorators import types

@types(x='int',y='double')
def f(x,y):
    pass
